# KoKo-backend

./: .env  Cargo.toml  plan.md
src/: database.rs  errors.rs  main.rs
src/handlers/: health.rs  users.rs
src/models/: user.rs
src/routers/: health.rs  users.rs
