[package]
name = "KoKo-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = {version = "0.8.6" , features = ["postgres" , "runtime-tokio-rustls" , "macros"]}
tokio = {version ="1.52.1" , features = ["full"]}
uuid = {version = "1.23.1" , features = ["serde" , "v4"]}
